--- a/src/partials/books.html
+++ b/src/partials/books.html
@@ -1,31 +1,41 @@
-<section class="books" id="books">
-  <h2>Trending books</h2>
-  <div class="container">
-    <div class="books-wrapper">
-      <div class="categories-books js-listener-categories">
-        <div class="container-categories js-container">
-          <div class="books-subtitle-placeholder">
-            <h3>Books</h3>
-            <div>
-              Showing
-              <span class="current-number-books"></span>&nbsp;of&nbsp;<span
-                class="total-number-books"
-              ></span>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <section class="books" id="books">
+      <h2>Trending books</h2>
+      <div class="container">
+        <div class="books-wrapper">
+          <div class="categories-books js-listener-categories">
+            <div class="container-categories js-container">
+              <div class="books-subtitle-placeholder">
+                <h3>Books</h3>
+                <div>
+                  Showing
+                  <span class="current-number-books"></span>&nbsp;of&nbsp;<span
+                    class="total-number-books"
+                  ></span>
+                </div>
+              </div>
+              <ul class="list categories js-list-categories">
+                <li class="item" data-name="top-books" tabindex="0">
+                  All categories
+                </li>
+              </ul>
             </div>
           </div>
-          <ul class="list categories js-list-categories">
-            <li class="item" data-name="top-books" tabindex="0">
-              All categories
-            </li>
-          </ul>
+
+          <div class="books-list-placeholder">
+            <ul class="list list-books js-list-books all-books-show"></ul>
+            <span class="loader"></span>
+            <button type="button" class="load-more">Load more</button>
+          </div>
         </div>
       </div>
-
-      <div class="books-list-placeholder">
-        <ul class="list list-books js-list-books all-books-show"></ul>
-        <span class="loader"></span>
-        <button type="button" class="load-more">Load more</button>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
+  </body>
+</html>
