--- a/src/partials/contact-modal.html
+++ b/src/partials/contact-modal.html
@@ -1,32 +1,44 @@
-<div class="container">
-  <div id="contact-modal" class="contact-modal">
-    <div class="contact-modal-content">
-      <span class="close-btn" id="closeModalBtn">&times;</span>
-      <h2 class="contact-modal-title">Register</h2>
-      <p class="contact-modal-text">Cozy Book Club – “The Midnight Library”</p>
-      <form class="contact-modal-form">
-        <label for="name">Name*</label>
-        <input type="text" id="name" placeholder="Ann" required />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <div class="container">
+      <div id="contact-modal" class="contact-modal">
+        <div class="contact-modal-content">
+          <span class="close-btn" id="closeModalBtn">&times;</span>
+          <h2 class="contact-modal-title">Register</h2>
+          <p class="contact-modal-text">
+            Cozy Book Club – “The Midnight Library”
+          </p>
+          <form class="contact-modal-form">
+            <label for="name">Name*</label>
+            <input type="text" id="name" placeholder="Ann" required />
 
-        <label for="email">Email*</label>
-        <input
-          type="email"
-          id="email"
-          placeholder="hello@booksy.com"
-          required
-        />
+            <label for="email">Email*</label>
+            <input
+              type="email"
+              id="email"
+              placeholder="hello@booksy.com"
+              required
+            />
 
-        <label for="message">Message</label>
-        <textarea
-          class="contact-modal-textarea"
-          id="message"
-          placeholder="Type your message..."
-        ></textarea>
+            <label for="message">Message</label>
+            <textarea
+              class="contact-modal-textarea"
+              id="message"
+              placeholder="Type your message..."
+            ></textarea>
 
-        <button type="submit" class="contact-modal-register-btn">
-          Register
-        </button>
-      </form>
+            <button type="submit" class="contact-modal-register-btn">
+              Register
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
+  </body>
+</html>
