--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -1,101 +1,121 @@
-<section class="feedbacks-section" id="feedbacks">
-  <div class="container">
-    <h2 class="feedback-title">Customer Feedbacks</h2>
-    <p class="feedback-text section-text">
-      See what our readers are saying about us!
-    </p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <section class="feedbacks-section" id="feedbacks">
+      <div class="container">
+        <h2 class="feedback-title">Customer Feedbacks</h2>
+        <p class="feedback-text section-text">
+          See what our readers are saying about us!
+        </p>
 
-    <!-- Slider main container -->
-    <div class="swiper">
-      <!-- Additional required wrapper -->
-      <ul class="swiper-wrapper">
-        <!-- Slides -->
-        <li class="swiper-slide">
-          <p class="feedback-text">
-            Great selection, fast delivery, and beautifully packaged books. My
-            go-to store for weekend reads!
-          </p>
-          <div class="name-wrapper">
-            <img
-              srcset="/img/feedbacks/jane.png 1x, /img/feedbacks/jane@2x.png 2x"
-              alt="Jane"
-            />
-            <div>
-              <h3 class="name-title">Jane Doe</h3>
-              <p class="feedback-text">Book Lover, Reader</p>
-            </div>
-          </div>
-        </li>
-        <li class="swiper-slide">
-          <p class="feedback-text">
-            Customer service was super helpful, and my order arrived earlier
-            than expected. Highly recommend!
-          </p>
-          <div class="name-wrapper">
-            <img
-              srcset="/img/feedbacks/john.png 1x, /img/feedbacks/john@2x.png 2x"
-              alt="John"
-            />
-            <div>
-              <h3 class="name-title">John Smith</h3>
-              <p class="feedback-text">Editor, BookMag</p>
-            </div>
-          </div>
-        </li>
-        <li class="swiper-slide">
-          <p class="feedback-text">
-            Love the curated picks and clear descriptions. Makes it easy to find
-            my next favorite br book.
-          </p>
-          <div class="name-wrapper">
-            <img
-              srcset="
-                /img/feedbacks/emily.png    1x,
-                /img/feedbacks/emily@2x.png 2x
-              "
-              alt="John"
-            />
-            <div>
-              <h3 class="name-title">Emily Johnson</h3>
-              <p class="feedback-text">Author, Novelist</p>
-            </div>
-          </div>
-        </li>
-        <li class="swiper-slide">
-          <p class="feedback-text">
-            I appreciate how easy it is to browse. The curated books and short
-            descriptions save me so much time.
-          </p>
-          <div class="name-wrapper">
-            <img
-              srcset="
-                /img/feedbacks/michael.png    1x,
-                /img/feedbacks/michael@2x.png 2x
-              "
-              alt="Michael"
-            />
-            <div>
-              <h3 class="name-title">Michael Brown</h3>
-              <p class="feedback-text">Reader, Enthusiast</p>
-            </div>
-          </div>
-        </li>
-      </ul>
+        <!-- Slider main container -->
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <ul class="swiper-wrapper">
+            <!-- Slides -->
+            <li class="swiper-slide">
+              <p class="feedback-text">
+                Great selection, fast delivery, and beautifully packaged books.
+                My go-to store for weekend reads!
+              </p>
+              <div class="name-wrapper">
+                <img
+                  src="/img/feedbacks/jane.png"
+                  srcset="
+                    /img/feedbacks/jane.png    1x,
+                    /img/feedbacks/jane@2x.png 2x
+                  "
+                  alt="Jane"
+                />
+                <div>
+                  <h3 class="name-title">Jane Doe</h3>
+                  <p class="feedback-text">Book Lover, Reader</p>
+                </div>
+              </div>
+            </li>
+            <li class="swiper-slide">
+              <p class="feedback-text">
+                Customer service was super helpful, and my order arrived earlier
+                than expected. Highly recommend!
+              </p>
+              <div class="name-wrapper">
+                <img
+                  src="/img/feedbacks/john.png"
+                  srcset="
+                    /img/feedbacks/john.png    1x,
+                    /img/feedbacks/john@2x.png 2x
+                  "
+                  alt="John"
+                />
+                <div>
+                  <h3 class="name-title">John Smith</h3>
+                  <p class="feedback-text">Editor, BookMag</p>
+                </div>
+              </div>
+            </li>
+            <li class="swiper-slide">
+              <p class="feedback-text">
+                Love the curated picks and clear descriptions. Makes it easy to
+                find my next favorite br book.
+              </p>
+              <div class="name-wrapper">
+                <img
+                  src="/img/feedbacks/emily.png"
+                  srcset="
+                    /img/feedbacks/emily.png    1x,
+                    /img/feedbacks/emily@2x.png 2x
+                  "
+                  alt="John"
+                />
+                <div>
+                  <h3 class="name-title">Emily Johnson</h3>
+                  <p class="feedback-text">Author, Novelist</p>
+                </div>
+              </div>
+            </li>
+            <li class="swiper-slide">
+              <p class="feedback-text">
+                I appreciate how easy it is to browse. The curated books and
+                short descriptions save me so much time.
+              </p>
+              <div class="name-wrapper">
+                <img
+                  src="/img/feedbacks/michael.png"
+                  srcset="
+                    /img/feedbacks/michael.png    1x,
+                    /img/feedbacks/michael@2x.png 2x
+                  "
+                  alt="Michael"
+                />
+                <div>
+                  <h3 class="name-title">Michael Brown</h3>
+                  <p class="feedback-text">Reader, Enthusiast</p>
+                </div>
+              </div>
+            </li>
+          </ul>
 
-      <div class="feedback-nav-wrapper">
-        <div class="my-swiper"></div>
+          <div class="feedback-nav-wrapper">
+            <div class="my-swiper"></div>
 
-        <div class="swiper-button-prev scroll-btn">
-          <svg class="arrow-nav" width="24" height="24">
-            <use href="/img/symbol-defs.svg#icon-left-arrow-alt"></use>
-          </svg>
-        </div>
-        <div class="swiper-button-next scroll-btn">
-          <svg class="arrow-nav" width="24" height="24">
-            <use href="/img/symbol-defs.svg#icon-right-arrow-alt"></use>
-          </svg>
+            <div class="swiper-button-prev scroll-btn">
+              <svg class="arrow-nav" width="24" height="24">
+                <use href="/img/symbol-defs.svg#icon-left-arrow-alt"></use>
+              </svg>
+            </div>
+            <div class="swiper-button-next scroll-btn">
+              <svg class="arrow-nav" width="24" height="24">
+                <use href="/img/symbol-defs.svg#icon-right-arrow-alt"></use>
+              </svg>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
+  </body>
+</html>
