--- a/src/partials/location.html
+++ b/src/partials/location.html
@@ -1,59 +1,68 @@
-<section class="location-section" id="location">
-  <div class="container">
-    <div class="location-block">
-      <div class="location-text">
-        <div class="location-title">Location</div>
-        <h2 class="location-heading">How to find us</h2>
-        <p class="location-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-          varius enim in eros elementum tristique.
-        </p>
-      </div>
-      <ul class="contacts-list">
-        <li class="contact-item">
-          <svg class="contact-svg" width="24" height="24">
-            <use href="/img/symbol-defs.svg#icon-envelope"></use>
-          </svg>
-          <div>
-            <div class="contact-type">Email</div>
-            <a href="mailto:hello@booksy.com" class="contact-link"
-              >hello@booksy.com</a
-            >
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <section class="location-section" id="location">
+      <div class="container">
+        <div class="location-block">
+          <div class="location-text">
+            <div class="location-title">Location</div>
+            <h2 class="location-heading">How to find us</h2>
+            <p class="location-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              Suspendisse varius enim in eros elementum tristique.
+            </p>
           </div>
-        </li>
-        <li class="contact-item">
-          <svg class="contact-svg" width="24" height="24">
-            <use href="/img/symbol-defs.svg#icon-phone"></use>
-          </svg>
-          <div>
-            <div class="contact-type">Phone</div>
-            <a href="tel:+612413043012" class="contact-link"
-              >+61 (241) 304-3012</a
-            >
-          </div>
-        </li>
-        <li class="contact-item">
-          <svg class="contact-svg" width="24" height="24">
-            <use href="/img/symbol-defs.svg#icon-envelope"></use>
-          </svg>
-          <div>
-            <div class="contact-type">Office</div>
-            <p class="contact-address">123 Books St, Sydney NSW 2000 AU</p>
-          </div>
-        </li>
-      </ul>
-    </div>
+          <ul class="contacts-list">
+            <li class="contact-item">
+              <svg class="contact-svg" width="24" height="24">
+                <use href="/img/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              <div>
+                <div class="contact-type">Email</div>
+                <a href="mailto:hello@booksy.com" class="contact-link">
+                  hello@booksy.com
+                </a>
+              </div>
+            </li>
+            <li class="contact-item">
+              <svg class="contact-svg" width="24" height="24">
+                <use href="/img/symbol-defs.svg#icon-phone"></use>
+              </svg>
+              <div>
+                <div class="contact-type">Phone</div>
+                <a href="tel:+612413043012" class="contact-link">
+                  +61 (241) 304-3012
+                </a>
+              </div>
+            </li>
+            <li class="contact-item">
+              <svg class="contact-svg" width="24" height="24">
+                <use href="/img/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              <div>
+                <div class="contact-type">Office</div>
+                <p class="contact-address">123 Books St, Sydney NSW 2000 AU</p>
+              </div>
+            </li>
+          </ul>
+        </div>
 
-    <!-- Google Maps iframe -->
-    <div class="map-container">
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13250.289060464624!2d151.19839392451158!3d-33.87491270614185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12ae3cb0b1a317%3A0xb74d4874139e4fe8!2sGeorge%20Street%20Adult%20Book%20Exchange!5e0!3m2!1sru!2sua!4v1751672647594!5m2!1sru!2sua"
-        width="100%"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"
-      ></iframe>
-    </div>
-  </div>
-</section>
+        <!-- Google Maps iframe -->
+        <div class="map-container">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13250.289060464624!2d151.19839392451158!3d-33.87491270614185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b12ae3cb0b1a317%3A0xb74d4874139e4fe8!2sGeorge%20Street%20Adult%20Book%20Exchange!5e0!3m2!1sru!2sua!4v1751672647594!5m2!1sru!2sua"
+            allowfullscreen
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </div>
+    </section>
+  </body>
+</html>
