--- a/src/partials/book-moda.html
+++ b/src/partials/book-moda.html
@@ -1,23 +1,42 @@
-<svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;display: none;" version="1.1"
-    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-    <defs>
-        
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <svg
+      aria-hidden="true"
+      style="
+        position: absolute;
+        width: 0;
+        height: 0;
+        overflow: hidden;
+        display: none;
+      "
+      version="1.1"
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+    >
+      <defs>
         <symbol id="icon-x" viewBox="0 0 32 32">
-            <path
-                d="M21.589 8.459l-5.657 5.656-5.656-5.656-1.885 1.885 5.656 5.656-5.656 5.656 1.885 1.885 5.656-5.656 5.657 5.656 1.885-1.885-5.656-5.656 5.656-5.656-1.885-1.885z">
-            </path>
+          <path
+            d="M21.589 8.459l-5.657 5.656-5.656-5.656-1.885 1.885 5.656 5.656-5.656 5.656 1.885 1.885 5.656-5.656 5.657 5.656 1.885-1.885-5.656-5.656 5.656-5.656-1.885-1.885z"
+          ></path>
         </symbol>
         <symbol id="icon-chevron-up" viewBox="0 0 32 32">
-            <path d="M8.391 19.057l1.885 1.885 5.724-5.724 5.724 5.724 1.885-1.885-7.609-7.609-7.609 7.609z"></path>
+          <path
+            d="M8.391 19.057l1.885 1.885 5.724-5.724 5.724 5.724 1.885-1.885-7.609-7.609-7.609 7.609z"
+          ></path>
         </symbol>
-                
-    </defs>
-</svg>
-    
-<div class="modal modal-books">
-    <div class="container">
-        <div class="modal-content">
+      </defs>
+    </svg>
 
-        </div>
+    <div class="modal modal-books">
+      <div class="container">
+        <div class="modal-content"></div>
+      </div>
     </div>
-    </div>
+  </body>
+</html>
