--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,45 +1,59 @@
-<footer class="footer">
-  <div class="container">
-    <div class="container-footer">
-      <div class="footer-part-first">
-        <a class="logo-footer" href="/src/index.html">
-          <img
-            class="img-logo-footer"
-            src="/img/footer/logo-footer.svg"
-            alt="logo"
-          />
-        </a>
-        <ul class="footer-nav-list">
-          <li class="footer-nav-item"><a href="/src/index.html">Home</a></li>
-          <li class="footer-nav-item"><a href="#books">Books</a></li>
-          <li class="footer-nav-item">
-            <a href="#feedbacks">Feedback</a>
-          </li>
-          <li class="footer-nav-item">
-            <a href="#location">Location</a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer-part-second">
-        <form class="footer-form">
-          <label class="title-footer" for="email">Join</label>
-          <div class="input-btn-wrap">
-            <input
-              type="email"
-              name="footer-input"
-              placeholder="Enter your email"
-              class="footer-input"
-              required
-              id="email"
-              pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
-            />
-            <span id="errorMessage" style="color: red" hidden>Error text</span>
-            <button type="submit" class="footer-btn">Sign Up</button>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <footer class="footer">
+      <div class="container">
+        <div class="container-footer">
+          <div class="footer-part-first">
+            <a class="logo-footer" href="/src/index.html">
+              <img
+                class="img-logo-footer"
+                src="/img/footer/logo-footer.svg"
+                alt="logo"
+              />
+            </a>
+            <ul class="footer-nav-list">
+              <li class="footer-nav-item">
+                <a href="/src/index.html">Home</a>
+              </li>
+              <li class="footer-nav-item"><a href="#books">Books</a></li>
+              <li class="footer-nav-item">
+                <a href="#feedbacks">Feedback</a>
+              </li>
+              <li class="footer-nav-item">
+                <a href="#location">Location</a>
+              </li>
+            </ul>
           </div>
-        </form>
-        <span class="footer-span-requried">* Required field </span>
+          <div class="footer-part-second">
+            <form class="footer-form">
+              <label class="title-footer" for="email">Join</label>
+              <div class="input-btn-wrap">
+                <input
+                  type="email"
+                  name="footer-input"
+                  placeholder="Enter your email"
+                  class="footer-input"
+                  required
+                  id="email"
+                  pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
+                />
+                <span id="errorMessage" style="color: red" hidden
+                  >Error text</span
+                >
+                <button type="submit" class="footer-btn">Sign Up</button>
+              </div>
+            </form>
+            <span class="footer-span-requried">* Required field </span>
+          </div>
+        </div>
+        <p class="footer-rights">© 2025 Booksy. All rights reserved.</p>
       </div>
-    </div>
-    <p class="footer-rights">© 2025 Booksy. All rights reserved.</p>
-  </div>
-</footer>
+    </footer>
+  </body>
+</html>
