--- a/src/css/books.css
+++ b/src/css/books.css
@@ -19,6 +19,7 @@
   color: #0b0500;
   background-color: transparent;
   transition: background-color 400ms ease;
+  margin-top: 16px;
 }
 
 .books .container .books-wrapper .button:hover {
