--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,11 +1,9 @@
 <header>
   <div class="container header-container">
     <a class="logo-header" href="./index.html">
-      <img
-        class="img-logo-header"
-        src="/img/footer/logo-footer.svg"
-        alt="logo"
-      />
+      <svg class="" width="84" height="36">
+        <use href="/img/symbol-defs.svg#icon-logo"></use>
+      </svg>
     </a>
     <button class="burger-btn" id="burger-btn" type="button" data-modal-open>
       <svg width="24" height="24">
