--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -12,13 +12,12 @@
   letter-spacing: -0.01em;
 }
 .swiper-slide.hero {
+  position: relative;
   padding: 0;
   border: 0;
   min-height: 199px;
 }
-.hero-images {
-  position: relative;
-}
+
 .hero-title-wrap {
   display: flex;
   align-items: center;
@@ -31,7 +30,7 @@
   position: absolute;
   max-width: 172px;
   left: 16px;
-  bottom: 16px;
+  top: 5.625em;
 }
 .hero-text {
   font-weight: 600;
@@ -41,6 +40,11 @@
   letter-spacing: -0.01em;
   color: #fff;
   margin-bottom: 16px;
+}
+@media only screen and (max-width: 360px) {
+  .hero-text {
+    margin-bottom: 0;
+  }
 }
 .hero-btn {
   display: flex;
