--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -22,7 +22,7 @@
       </div>
       <div class="footer-part-second">
         <form class="footer-form">
-          <label class="title-footer" for="email">Join</label>
+          <label class="title-footer" for="footer-email">Join</label>
           <div class="input-btn-wrap">
             <input
               type="email"
@@ -30,7 +30,7 @@
               placeholder="Enter your email"
               class="footer-input"
               required
-              id="email"
+              id="footer-email"
               pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
             />
             <span id="errorMessage" style="color: red" hidden>Error text</span>
