--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -19,6 +19,7 @@
             <img
               srcset="/img/feedbacks/jane.png 1x, /img/feedbacks/jane@2x.png 2x"
               alt="Jane"
+              src="/img/feedbacks/jane.png"
             />
             <div>
               <h3 class="name-title">Jane Doe</h3>
@@ -35,6 +36,7 @@
             <img
               srcset="/img/feedbacks/john.png 1x, /img/feedbacks/john@2x.png 2x"
               alt="John"
+              src="/img/feedbacks/john.png"
             />
             <div>
               <h3 class="name-title">John Smith</h3>
@@ -53,6 +55,7 @@
                 /img/feedbacks/emily.png    1x,
                 /img/feedbacks/emily@2x.png 2x
               "
+              src="/img/feedbacks/emily.png"
               alt="John"
             />
             <div>
@@ -73,6 +76,7 @@
                 /img/feedbacks/michael@2x.png 2x
               "
               alt="Michael"
+              src="/img/feedbacks/michael.png"
             />
             <div>
               <h3 class="name-title">Michael Brown</h3>
